kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: choir-coal-deployment
  namespace: choir-coal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: choir-coal
  template:
    metadata:
      labels:
        app: choir-coal
    spec:
      containers:
        - name: choir-coal
          image: choir-coal:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: choir-coal-svc
  namespace: choir-coal
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: choir-coal
